Did some cleanup