@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
-/** Plays games. One matchup is a (map, opponent) pair played once from each side. */
 public final class GPMatch {
     private GPMatch() {}
 
@@ -24,17 +23,11 @@ public final class GPMatch {
         }
     }
 
-    /** Outcome of one game from the candidate's point of view. */
     public record GameResult(double score, double margin, int cycles, boolean endedByLimit, boolean crashed) {}
 
-    /**
-     * Both games of one matchup, averaged.
-     * {@code score} is the shaped value selection uses; {@code rawScore} is plain win=1 / draw=0.5 / loss=0.
-     */
     public record MatchupResult(EvaluationCase evaluationCase, double score, double rawScore, double margin,
                                 double asPlayer0, double asPlayer1, int limitedGames) {}
 
-    /** Plays every case for one individual. Thread-safe: nothing here is shared between calls. */
     public static List<MatchupResult> evaluate(GPIndividual individual, UnitTypeTable utt,
                                                List<PhysicalGameState> maps, List<EvaluationCase> cases,
                                                GPConfig cfg) throws Exception {
@@ -56,24 +49,14 @@ public final class GPMatch {
         return results;
     }
 
-    /**
-     * Turns win/draw/loss into a value with a gradient. Wins stay 1. A timed-out draw moves with
-     * the material margin. A loss keeps a small share of credit for material, capped so that it
-     * can never outscore a draw (enforced by GPConfig.validate). Crashes score a flat 0.
-     */
     static double shapedScore(GameResult r, GPConfig cfg) {
         if (r.crashed()) return 0.0;
         if (r.score() == 1.0) return 1.0;
         if (r.score() == 0.0) return cfg.lossMarginWeight * (1 + r.margin()) / 2;
-        if (r.endedByLimit()) return Math.max(0, Math.min(1, 0.5 + cfg.drawMarginWeight * r.margin()));
+        if (r.endedByLimit()) return Math.clamp(0.5 + cfg.drawMarginWeight * r.margin(), 0, 1);
         return 0.5;
     }
 
-    /**
-     * Runs one headless (or visualised) game to completion. A game ends on a winner, at
-     * {@code maxCycles}, or after {@code maxInactiveCycles} without any issued action.
-     * If a bot throws, the game counts as a loss for the candidate.
-     */
     public static GameResult playOneGame(AI ai1, AI ai2, PhysicalGameState map, UnitTypeTable utt,
                                          GPConfig cfg, int candidatePlayer, boolean visualize) throws Exception {
         ai1.reset(utt);
@@ -114,7 +97,6 @@ public final class GPMatch {
 
     private static final Set<String> reportedCrashes = ConcurrentHashMap.newKeySet();
 
-    /** Prints each distinct crash once with its stack trace, so one broken matchup cannot flood the log. */
     private static void reportCrash(AI ai1, AI ai2, GameState gs, RuntimeException e) {
         StackTraceElement origin = e.getStackTrace().length > 0 ? e.getStackTrace()[0] : null;
         String signature = ai1.getClass().getSimpleName() + " vs " + ai2.getClass().getSimpleName()
@@ -125,7 +107,6 @@ public final class GPMatch {
         e.printStackTrace(System.out);
     }
 
-    /** (mine - theirs) / total, in [-1, 1], where material is banked resources plus the cost of every unit held. */
     private static double materialMargin(GameState gs, int candidatePlayer) {
         double mine = materialValue(gs, candidatePlayer);
         double theirs = materialValue(gs, 1 - candidatePlayer);
@@ -140,7 +121,6 @@ public final class GPMatch {
         return value;
     }
 
-    /** A per-matchup opponent seed, so stochastic opponents play the same game for every individual. */
     private static long mixSeed(long seed, String opponentName, int mapIndex) {
         long x = seed ^ ((long) opponentName.hashCode() << 32) ^ mapIndex;
         x ^= (x >>> 33);
